[tool.poetry]
name = "nuctpy"
version = "0.1.0"
description = "API wrapper of NUCT"
authors = ["nac-39"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
CacheControl = "0.12.11"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
mkdocs-material = "^8.4.3"
pre-commit = "^2.20.0"
types-requests = "^2.28.10"
mypy = "^0.971"
mkdocs-gen-files = "^0.4.0"
pytest = "^7.1.3"
mkdocs-literate-nav = "^0.4.1"
mkdocs-section-index = "^0.3.4"
mkdocs-click = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nuct = "nuctpy.cli.nuct:nuct"
